try to fix styles in newtask and watchtask
styles started to overlap and I tried to remove it

--- a/frontend/src/components/TaskNewComponent/NewTaskComponent/NewTaskComponent.css
+++ b/frontend/src/components/TaskNewComponent/NewTaskComponent/NewTaskComponent.css
@@ -10,12 +10,11 @@
     border-radius: 20px;
 }
 
-.task-header{
+.new-task .task-header{
     width: 380px;
     height: 49px;
 
-    margin: 8% auto;
-    margin-bottom: 0;
+    margin: 8% auto 0 auto;
 
     text-align: center;
 }
@@ -25,41 +24,41 @@
         height: 551px;
         margin: 36% auto;
     }
-    .description-header{
+    .new-task .description-header{
         margin-right: 3%;
         font-size: 16px;
         line-height: 20px;
     }
-    .task-description-text{
+    .new-task .task-description-text{
         height: 15px;
         font-size: 12px;
 
     }
-    .task-description-text:focus{
+    .new-task .task-description-text:focus{
         top: 52%;
 
     }
-    .element-notification-add{
+    .new-task .element-notification-add{
 
         justify-content: center;
     }
-    .add-notification-container{
+    .new-task .add-notification-container{
         margin-left: 4%;
     }
 
-    .task-modify-elements{
+    .new-task .task-modify-elements{
         font-size: 18px;
         line-height: 22px;
     }
 
-    .task-header{
+    .new-task .task-header{
         width: 247px;
         height: 32px;
 
         font-size: 26px;
         line-height: 32px;
     }
-    .task-header-input{
+    .new-task .task-header-input{
         width: 247px;
 
         font-size: 26px;
@@ -68,17 +67,17 @@
 }
 
 
-.task-header-input{
+.new-task .task-header-input{
     width: 380px;
 
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 40px;
     line-height: 49px;
 
 }
-.task-header-line{
+.new-task .task-header-line{
     width: 75%;
     height: 0;
 
@@ -86,31 +85,29 @@
 
     border: 1px solid #000000;
 }
-.task-modify-elements{
-    margin: 8% auto;
-    margin-bottom: 0;
-
-    font-family: 'Montserrat';
+.new-task .task-modify-elements{
+    margin: 8% auto 0 auto;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 20px;
     line-height: 24px;
     text-align: center;
 }
-.element-data-start{
+.new-task .element-data-start{
     margin-bottom: 2%;
     color: #000;
 }
 
-.element-data-end{
+.new-task .element-data-end{
     margin-bottom: 7%;
 }
-.element-notification-whole-day{
+.new-task .element-notification-whole-day{
     font-size: 16px;
     line-height: 20px;
     margin-bottom: 3%;
 }
-.element-notification-add{
+.new-task .element-notification-add{
     font-size: 16px;
     line-height: 20px;
     width: 300px;
@@ -121,23 +118,21 @@
 }
 
 
-.text-link-color{
+.new-task .text-link-color{
     color: #000;
 }
 
-.new-task-description{
-    margin: 10% auto;
-    margin-bottom: 0;
-
+.new-task .new-task-description{
+    margin: 10% auto 0 auto;
 
 }
 
 
-.add-notification-container{
+.new-task .add-notification-container{
     margin-left: 38px;
 }
-.description-header{
-    font-family: 'Montserrat';
+.new-task .description-header{
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -149,14 +144,14 @@
     margin: 0 20px;
 
 }
-.task-description-text{
+.new-task .task-description-text{
     margin-left: 17px;
     margin-top: 10px;
     resize: none;
     height: 30px;
     outline: none;
 
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 18px;
@@ -164,7 +159,7 @@
 
     padding-left: 5px;
 }
-.task-description-text:focus{
+.new-task .task-description-text:focus{
 
     width: 90%;
     height: 100px;
@@ -172,11 +167,5 @@
     border: 1px solid #9933CC;
     border-radius: 10px;
 }
-task-description-text:focus{
-    width: 300px;
-    height: 120px;
 
-    border: 1px solid #9933CC;
-    border-radius: 10px;
-}
 
